--- a/software.html
+++ b/software.html
@@ -39,6 +39,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/geophy/49ec1246-9db8-41c5-b819-424a4af27c79'>GeoPhy - Scala Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/geophy/610002fc-134a-4f82-a9dc-2267ad45cfde'>GeoPhy - Scala Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Bey/743999692432163-full-stack-software-engineer'>Bey Full Stack Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-29</p>
@@ -107,7 +115,7 @@
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999692259865-staff-software-engineer-services-application-backend'>Optimizely Staff Software Engineer, Services: Application Backend | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999692259865-staff-software-engineer-services-application-backend'>Optimizely Staff Software Engineer, Services: Application Backend | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -159,7 +167,7 @@
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dtcc.referrals.selectminds.com/jobs/senior-software-engineer-2686'>Senior Software Engineer - DTCC Careers</a></h5> 
+<h5><a href='https://dtcc.referrals.selectminds.com/jobs/senior-software-engineer-2686'>Senior Software Engineer - DTCC Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -275,7 +283,7 @@
 <p><span class="badge badge-light">Irvine California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bjss/jobs/1796397'>Job Application for Software Engineer - Java  at BJSS</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bjss/jobs/1796397'>Job Application for Software Engineer - Java  at BJSS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -384,7 +392,7 @@ productive, more secure and more sustainable. We are harnessing the.....</p>
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1713684'>Job Application for Senior VoIP Software Engineer at Fuze</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1713684'>Job Application for Senior VoIP Software Engineer at Fuze</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -420,7 +428,7 @@ productive, more secure and more sustainable. We are harnessing the.....</p>
 <p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on:: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/lamudi/7f1a641c-df16-4de9-a334-e5644d977712'>Lamudi - Senior Software Developer / PHP Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lamudi/7f1a641c-df16-4de9-a334-e5644d977712'>Lamudi - Senior Software Developer / PHP Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -432,7 +440,7 @@ productive, more secure and more sustainable. We are harnessing the.....</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/invision/jobs/1793919'>Job Application for Senior Software Engineer at InVision</a></h5> 
+<h5><a href='https://boards.greenhouse.io/invision/jobs/1793919'>Job Application for Senior Software Engineer at InVision</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -449,14 +457,6 @@ productive, more secure and more sustainable. We are harnessing the.....</p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/113134/jobs/4345537002'>Job Application for Sr. Software Engineer (.NET/C#) at Cast & Crew Entertainment Services, LLC</a></h5> 
-<p><span class="badge badge-light">California, United States</span></p>
-<p>Posted on: 2019-07-28</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/113134/jobs/4345557002'>Job Application for Sr. Software Engineer (Java) at Cast & Crew Entertainment Services, LLC</a></h5> 
-<p><span class="badge badge-light">California, United States</span></p>
-<p>Posted on: 2019-07-28</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/113134/jobs/4346436002'>Job Application for Sr. Software Engineer (Javascript) at Cast & Crew Entertainment Services, LLC</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
